update：1、导航主题dark、light切换 2、页面布局：导航在左在上的切换 3、Header是否固定的切换 4、页面内容定宽还是流式的切换 5、主题色切换

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -38,7 +38,7 @@ body {
     line-height: @height;
     padding-left: 20px;
     font-size: 22px;
-    color: #fff;
+    color: @hColor;
     img {
       display: inline-block;
       width: 32px;
@@ -55,28 +55,42 @@ body {
       font-weight: 600;
     }
 }
-.top-header{
+.top-menu-wrapper(){
+  overflow: hidden;
+  .logo{
+    .logo(60px,#fff);
+    float:left;
+    width:200px;
+  }
+  .top-menu{
+    float:left;
+    .ant-menu-dark {
+      .ant-menu-horizontal{
+        height:64px;
+      }
+    }
+  }
+  .userinfo{
+    float:right;
+  }
+}
+.top-header-dark{
   background:#001529;
   box-shadow: 2px 0 6px rgba(0,21,41,.35);
   width:100%;
   .top-menu-wrapper{
-    overflow: hidden;
-    .logo{
-      .logo(60px,#fff);
-      float:left;
-      width:200px;
+    .top-menu-wrapper();
+    .ant-menu-horizontal{
+      border-bottom:none;
     }
-    .top-menu{
-      float:left;
-      .ant-menu-dark {
-        .ant-menu-horizontal{
-          height:64px;
-        }
-      }
-    }
-    .userinfo{
-      float:right;
-    }
+  }
+}
+.top-header-light{
+  background:#fff;
+  box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  width:100%;
+  .top-menu-wrapper{
+    .top-menu-wrapper();
   }
 }
 
