--- a/src/assets/css/variables.less
+++ b/src/assets/css/variables.less
@@ -1,6 +1,6 @@
-@import "~antd/lib/style/themes/default.less";
+// @import "~antd/lib/style/themes/default.less";
 
-@primary-color: #1890ff;               //全局主色：比如导航hover时的文字颜色、背景色基色、单选多选钮的颜色、
+@primary-color: #dbd952;               //全局主色：比如导航hover时的文字颜色、背景色基色、单选多选钮的颜色、
                                                     // Steps的progress过程的背景色、switch的背景色、分页器被选中的页码的边框色、被选中页码文字的基色
 // @layout-header-background: #2e3943;            //Layout中的Header背景色：ant-layout-header
 // @layout-sider-background: #fff;                //Layout中Sider的背景色：ant-layout-sider
@@ -42,7 +42,7 @@
 // 每一项菜单的背景色：以全局色为基色
 
 // Button相关
-// @btn-primary-bg:#108ee9;                 //  按钮背景色
+@btn-primary-bg:@primary-color;                 //  按钮背景色
 // @btn-primary-color:#fff;            //按钮文本颜色
 // @btn-border-radius-base:20px;                       //按钮圆角边框
 // @btn-height-base: 28px;
