--- a/src/components/mySettingDrawer/index.less
+++ b/src/components/mySettingDrawer/index.less
@@ -1,5 +1,5 @@
-@import '~antd/lib/style/themes/default.less';
-
+@import '../../assets/css/global.less';
+@heading-color:#fff;
 .content {
   position: relative;
   min-height: 100%;
@@ -19,7 +19,7 @@
     position: relative;
     margin-right: 16px;
     // box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-    border-radius: @border-radius-base;
+    border-radius: 5px;
     cursor: pointer;
     img {
       width: 48px;
