--- a/src/components/siderMenu/style.less
+++ b/src/components/siderMenu/style.less
@@ -8,23 +8,50 @@
   .logo {
      .logo(60px,#fff);
   }
-  .next-ver {
-    background: #001529;
-    color: #ccc;
-    border-right: 0;
-    .ant-menu-submenu > .ant-menu {
-      background: #001529;
-      color: #ccc;
-    }
-    .ant-menu-item > a {
-      color: #ccc;
-    }
-    .ant-menu-item-selected {
-      width: 100%;
-      background: #1890ff;
-      a {
-        color: #fff;
-      }
-    }
+  // .next-ver {
+  //   background: #001529;
+  //   color: #ccc;
+  //   border-right: 0;
+  //   .ant-menu-submenu > .ant-menu {
+  //     background: #001529;
+  //     color: #ccc;
+  //   }
+  //   .ant-menu-item > a {
+  //     color: #ccc;
+  //   }
+  //   .ant-menu-item-selected {
+  //     width: 100%;
+  //     background: #1890ff;
+  //     a {
+  //       color: #fff;
+  //     }
+  //   }
+  // }
+}
+.yux-sider-light{
+  min-height: 100vh;
+  box-shadow: 2px 0 6px rgba(255,254,255,.35);
+  .logo {
+     .logo(60px,rgba(0,21,41,.35));
+    //  color:rgba(0,0,0,0.65);
   }
+  // .next-ver {
+  //   background: #001529;
+  //   color: #ccc;
+  //   border-right: 0;
+  //   .ant-menu-submenu > .ant-menu {
+  //     background: #001529;
+  //     color: #ccc;
+  //   }
+  //   .ant-menu-item > a {
+  //     color: #ccc;
+  //   }
+  //   .ant-menu-item-selected {
+  //     width: 100%;
+  //     background: #1890ff;
+  //     a {
+  //       color: #fff;
+  //     }
+  //   }
+  // }
 }
