--- a/src/layouts/style.less
+++ b/src/layouts/style.less
@@ -25,6 +25,13 @@ ul,li{
     }
   }
   .yux-content {
+    margin: 20px auto;
+    min-height: 0;
+    flex: auto;
+    max-width:1200px;
+  }
+  .yux-content-fluid{
+    width:100%;
     margin: 20px;
     min-height: 0;
     flex: auto;
