--- a/src/components/topNavHeader/style.less
+++ b/src/components/topNavHeader/style.less
@@ -1,3 +1,4 @@
+@import '../../assets/css/global.less';
 @height: 60px;
 
 .yux-header {
@@ -5,7 +6,7 @@
   height: $height!important;
   padding: 0 20px!important;
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
+  // box-shadow: 0 1px 4px rgba(0,21,41,.08);
   .trigger, .logout {
     font-style: 16px;
     color: #333;
