--- a/src/public/easylog.ejs
+++ b/src/public/easylog.ejs
@@ -10,6 +10,7 @@
   <meta name="author" content="dt-stack">
   <link href="<%= htmlWebpackPlugin.options.assets.favicon %>" type="image/x-icon" rel="icon">
   <link href="<%= htmlWebpackPlugin.options.assets.favicon %>" type="image/x-icon" rel="shortcut icon">
+  <link rel="stylesheet/less" href="assets/css/variables.less" />     
   <title><%= htmlWebpackPlugin.options.assets.title %></title>
 </head>
 
