--- a/src/components/mySettingDrawer/index.less
+++ b/src/components/mySettingDrawer/index.less
@@ -1,5 +1,5 @@
 @import '../../assets/css/global.less';
-@heading-color:#fff;
+@heading-color:rgba(0, 0, 0, 0.65);
 .content {
   position: relative;
   min-height: 100%;
